# video-benchmark-tool

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake-modules/: FindFFMPEG.cmake  FindGLPK.cmake
scripts/: plot-pareto-codec-comparaison-bitstream.m  plot-pareto-codec-comparaison-encoding-time.m  plot-pareto-codec-comparaison-vmaf.m  plot-pareto-comparaison-bitstream-size.m  plot-pareto-comparaison-encoding-time.m  plot-pareto-comparaison-vmaf.m  plot-pareto-encoding-time.m  plot-pareto-fixed-bitstream-size.m  plot-pareto-fixed-encoding-time.m  plot-pareto-fixed-vmaf.m  plot-pareto-vmaf.m
src/: main.cpp
src/CLI/: OptionParser.cpp  OptionParser.h
src/Controller/: QBenchmarkConfigController.cpp  QBenchmarkConfigController.h  QBenchmarkController.cpp  QBenchmarkController.h
src/Helper/: AVCodecHelper.cpp  AVCodecHelper.h  AVFormatHelper.cpp  AVFormatHelper.h  AVPacketHelper.cpp  AVPacketHelper.h  Log.cpp  Log.h  VMAFWrapper.cpp  VMAFWrapper.h
src/Process/: BenchmarkVMAF.cpp  BenchmarkVMAF.h  Decoder.cpp  Decoder.h
src/Process/helper/: AVCodecHelper.cpp  AVCodecHelper.h  AVFormatHelper.cpp  AVFormatHelper.h  CodecParameters.cpp  CodecParameters.h  VMAFWrapper.cpp  VMAFWrapper.h
src/Process/vmaf/: Benchmark.cpp  Benchmark.h  Configuration.cpp  Configuration.h  Experiment.cpp  Experiment.h  Results.cpp  Results.h
src/Types/: Clock.h  Codec.cpp  Codec.h  Packet.h  Vector.h
src/View/: QBenchmarkConfigView.cpp  QBenchmarkConfigView.h  QBenchmarkProgressView.cpp  QBenchmarkProgressView.h  QBenchmarkResultsView.cpp  QBenchmarkResultsView.h  QMainView.cpp  QMainView.h
tools/: CMakeLists.txt  generate-graph.cpp
tools/extract-image-from-video/: extract-image-from-video
tools/extract-pareto-data/: CMakeLists.txt  main.cpp
tools/extract-pareto-data/local/: Data.cpp  Data.h
tools/extract-pareto-data/scripts/: plot-pareto-comparaison-bitstream-size.m  plot-pareto-comparaison-encoding-time.m  plot-pareto-comparaison-vmaf.m  plot-pareto-comparaison.m  plot-pareto-fixed-bitstream-size.m  plot-pareto-fixed-encoding-time.m  plot-pareto-fixed-vmaf.m
tools/generate-graph/: CMakeLists.txt  generate-graph.cpp
tools/glpk-solver/: CMakeLists.txt  main.cpp
tools/glpk-solver/local/: Data.cpp  Data.h  LinearSolver.cpp  LinearSolver.h
